--- a/index.html
+++ b/index.html
@@ -1,30 +1,39 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Fred Mwaniki - Quantitative Researcher & Data Scientist</title>
-  <meta name="description" content="Quantitative researcher focused on alpha extraction, model innovation, and clarity through data." />
-  <meta name="author" content="Fred Mwaniki" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZX767JN9WD"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/fred.png" />
+      gtag('config', 'G-ZX767JN9WD');
+    </script>
 
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Lora:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Fred Mwaniki - Quantitative Researcher & Data Scientist</title>
+    <meta name="description" content="Quantitative researcher focused on alpha extraction, model innovation, and clarity through data." />
+    <meta name="author" content="Fred Mwaniki" />
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Fred Mwaniki - Quantitative Researcher" />
-  <meta property="og:description" content="Building signals, systems, and stories—where math meets meaning." />
-  <meta property="og:type" content="website" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/fred.png" />
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@fred_mwaniki" />
-</head>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Lora:wght@300;400;500;600&display=swap" rel="stylesheet">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Fred Mwaniki - Quantitative Researcher" />
+    <meta property="og:description" content="Building signals, systems, and stories—where math meets meaning." />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@fred_mwaniki" />
+  </head>
 
   <body>
     <div id="root"></div>
